--- a/vignettes/Week8_Simulation/Week8_vignette.Rmd
+++ b/vignettes/Week8_Simulation/Week8_vignette.Rmd
@@ -13,9 +13,9 @@ vignette: >
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
-## 1. Overview of Worked Example
+## 1. Overview of Worked Example {-}
 
-### a) Goals 
+### a) Goals {-} 
 
 This worked example shows:
 
@@ -24,11 +24,11 @@ This worked example shows:
 - Compare partial Mantel test to 'Sunder'
 - Run many simulations and synthesize results
 
-### b) Data set
+### b) Data set {-}
 
 We will simulate data using the 'landgenreport' function of the package 'PopGenReport'. See: www.popgenreport.org
 
-### c) Required R libraries
+### c) Required R packages {-}
 
 ```{r message=FALSE, warning=TRUE}
 library(LandGenCourse)
@@ -69,9 +69,9 @@ The following 'setup chunk' is used to set the root address of file paths to the
 knitr::opts_knit$set(root.dir = normalizePath("..")) 
 ```
 
-## 2. Initialize a landscape
+## 2. Initialize a landscape {-}
 
-### a) Create a random landscape 
+### a) Create a random landscape {-} 
 
 We will use the 'randomHabitat' function from the 'secr' package to create a random habitat map and assign resistance values to habitat and non-habitat. There are many alternative ways to define your map, e.g. simply load a png file or any other file format using the 'raster' function from package 'raster' (?raster::raster, see the examples in there). If your map is categorical, assign resistance values to the different values in the raster as shown below for the missing values. If your map is already a resistance surface, skip this step.
 
@@ -119,7 +119,7 @@ plot(r)
 
 We have thus created a numeric raster with a resistance surface where habitat cells (grey) have a resistance value of 1 and non-habitat cells (green) have a resistance value of 10.
 
-### b) Add populations to the landscape (using minimal distance)
+### b) Add populations to the landscape (using minimal distance) {-}
 
 We create a function that allows us to set up 'n' subpopulations in the habitat only (grid cells with value = 1). The subpopulations should be at least 'minDist' units apart, given any resistance surface 'landscape'. We also include an option to plot a raster map with the sampled locations of the populations. 
 
@@ -173,15 +173,15 @@ par(mar=c(1,1,1,1))
 createpops(n=8, minDist = 3, landscape = r, plot = TRUE)
 ```
 
-### c) Initialise a metapopulation 
+### c) Initialise a metapopulation {-} 
 
 We use the function 'init.popgensim' from package 'PopGenReport' to initialise a metapopulation based on the grid cells that we just selected. To do this we need to initialise a number of parameters (the locations of the subpopulations, the number of individuals per subpopulation, the number of loci and alleles per loci. For a full list check '?init.popgensim').
 
 To store all the parameters we create a list called para where we store all of them
 
-## 3. Define simulation parameters
+## 3. Define simulation parameters {-}
 
-### a) Define your metapopulation
+### a) Define your metapopulation {-}
 
 Define metapopulation: 
 
@@ -259,7 +259,7 @@ para$NN <- 8  #number of neighbours for the cost distance method
 
 ```
 
-### b) Initialise your population on the landscape  
+### b) Initialise your population on the landscape {-}  
 
 Now finally we can initialise our population using the init function. We'll call it 'simpops.0' to indicate that this is the initial generation.
 
@@ -311,9 +311,9 @@ Check the pairwise Fst values, why are they so low? Hints:
 - How many generations have we simulated thus far?
 - At this point in the simulation, do you expect to see an effet of IBD, IBR, or neither?
 
-## 4. Run simulations and analyze results
+## 4. Run simulations and analyze results {-}
 
-### a) Run your simulation over multiple time steps (years) 
+### a) Run your simulation over multiple time steps (years) {-} 
 
 Now we can run our simulation by simply passing our object 'simpops' to the function 'run.popgensim', with some additional parameters that are needed for the simulation. We specify the number of generations the simulation should run with the steps parameter. (Check ?run.popgensim for a description of all parameters).
 
@@ -329,7 +329,7 @@ simpops <- PopGenReport::run.popgensim(simpops.0, steps=3, cost.mat,
 
 In essence we were running a metapopulation with 100 individuals per subpopulation on our resistance landscape for 3 generations. The question is now was that enough time to create an effect on population structure?
 
-### b) Analyse your simulated population with a partial Mantel test
+### b) Analyse your simulated population with a partial Mantel test {-}
 
 Let's check the pairwise Fst values and then do a landscape genetic analysis using partial Mantel tests.
 
@@ -361,7 +361,7 @@ res <- PopGenReport::wassermann(eucl.mat = eucl.mat,
 res[res$model == "Gen ~cost | Euclidean", "p"]
 ```
 
-### c) Optional: Analyze your simulated populations using 'Sunder'
+### c) Optional: Analyze your simulated populations using 'Sunder' {-}
 
 See: http://www.nbi.dk/~botta/Sunder.html#overview
 
@@ -448,7 +448,7 @@ Let's test it:
 getSunder()
 ```
 
-## 5. Run simulator using a previously defined parameter set
+## 5. Run simulator using a previously defined parameter set {-}
 
 Once the simulator works and you are certain that you understand how the simulator needs to be set up for a single run, in almost all studies on simulations you want to be able to re-run the simulator in an automatized way. There are several reasons why you want to do that.
 
@@ -473,7 +473,7 @@ Okay before we start we need to think about what kind of parameters we want to e
 - As output I would still like to record the Fst value, but also the full genetic data set and the parameters used to run the simulation.
 - In addition I want to repeat each run 5 times (most often you would do more repetitions) to check how much general variation there is between runs with exactly the same parameter combination. 
 
-### a) Specify and record the parameter combinations
+### a) Specify and record the parameter combinations {-}
 
 Let's define the varying numbers of time steps we would like to run the simulations. Here we define a sequence from 5 to 45 in steps of 20, which results in a series c(5, 25, 45). We will interpret these values as numeric, therefore we don't convert to 'factor'. 
 
@@ -496,7 +496,7 @@ tibble::as_tibble(para.space)
 
 As you can see this results in 15 combinations (3 time steps x 5 repeats). The beauty of this approach is that it is very flexible and adaptable to runs over other parameter combinations, as you can provide more than two parameter variables to 'expand.grid'.
 
-### b) Run the simulator over every parameter combination.
+### b) Run the simulator over every parameter combination {-}
 
 Remember our parameters are all defined in the 'para' object (a list) and we want to keep them constant, except for running the simulation for different number of years. This means that we only need to modify the argument 'steps'.
 
@@ -552,7 +552,7 @@ Question: what changes between replicate runs, and what not? Consider the follow
 - Initial populations with initial genotypes
 - Migration and gene flow
 
-### c) Save your complete simulation run (input and output)
+### c) Save your complete simulation run (input and output) {-}
 
 Simply running the simulation 15 times (number of rows in 'para.space') by itself is not useful yet. We need to store the simulation runs somehow, so we can collect them afterwards to calculate summary statistics and analyse the runs. 
 
@@ -626,7 +626,7 @@ for (i in 1:nrow(para.space))
 
 ```
 
-### d) Analyze and synthesize results 
+### d) Analyze and synthesize results {-} 
 
 If you check your output folder (simout) you should see 15 files.
 
@@ -711,7 +711,7 @@ Questions:
 Have fun and please give us feed back what you think about this Worked Example. [Bernd Gruber](mailto:bernd.gruber@canberra.edu.au), [Erin Landguth](erin.landguth@gmail.com), [Helene Wagner](mailto:helene.wagner@utoronto.ca).
 
 
-## 6. R Exercise Week 8
+## 6. R Exercise Week 8 {-}
 
 **Task:** Carry out a permutation test for the Mantel rank correlation to test for fine-scale spatial genetic structure in *Pulsatilla vulgaris* adults, using the pooled data from all seven patches. Use a one-sided alternative "greater", as we expect the Mantel rank correlation to be positive.
 
